--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "express": "^4.18.1",
+    "joi": "^13.1.0",
     "mongoose": "^6.6.2",
     "underscore": "^1.13.6"
   }
