--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "config": "^1.29.4",
     "express": "^4.18.1",
+    "fawn": "^2.1.5",
     "joi": "^13.1.0",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.4",
     "mongodb": "^4.10.0",
     "mongoose": "^5.13.15",
     "nodemon": "^2.0.20",
