--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "config": "^1.29.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
     "joi": "^13.1.0",
     "joi-objectid": "^4.0.2",
@@ -12,7 +14,9 @@
     "mongodb": "^4.10.0",
     "mongoose": "^5.13.15",
     "nodemon": "^2.0.20",
-    "underscore": "^1.13.6"
+    "underscore": "^1.13.6",
+    "winston": "^2.4.0",
+    "winston-mongodb": "^3.0.0"
   },
   "name": "bookly",
   "description": "A book sharing application where you can share books with your friends and write your book",
