--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "config": "^1.29.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-async-errors": "^2.1.0",
     "fawn": "^2.1.5",
+    "helmet": "^6.0.0",
     "joi": "^13.1.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.1.1",
@@ -26,6 +28,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "jest --watchAll --verbose --coverage"
+  },
+  "engines": {
+    "node": "18.0.0"
   },
   "repository": {
     "type": "git",
